Write unit tests for view state mapping, with a slightly contrived implemenation of the mapping.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="cry_text">😿</string>
     <string name="error_loading">Sorry, we had a problem loading your data</string>
     <string name="store_closed">Closed</string>
-    <string name="asap_minutes">%1$d mins</string>
+    <string name="asap_minutes">mins</string>
 </resources>
