--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="error_loading">Sorry, we had a problem loading your data</string>
     <string name="store_closed">Closed</string>
     <string name="asap_minutes">mins</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="price_display">🚗 $%1$s</string>
+    <string name="rating_display">%1$s ⭐</string>
 </resources>
